<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/btn_main_eventbus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_event"/>

    <Button
        android:id="@+id/btn_main_rx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_rx"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

</LinearLayout>